--- a/ProyectoBDM.csproj
+++ b/ProyectoBDM.csproj
@@ -93,17 +93,23 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="clientecs.cs">
+    <Compile Include="RegistroClientes.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="clientecs.Designer.cs">
-      <DependentUpon>clientecs.cs</DependentUpon>
+    <Compile Include="RegistroClientes.Designer.cs">
+      <DependentUpon>RegistroClientes.cs</DependentUpon>
     </Compile>
     <Compile Include="Conexion.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Conexion.Designer.cs">
       <DependentUpon>Conexion.cs</DependentUpon>
+    </Compile>
+    <Compile Include="InicioSesionCliente.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="InicioSesionCliente.Designer.cs">
+      <DependentUpon>InicioSesionCliente.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -113,11 +119,14 @@
     <Compile Include="ValidacionPersona.Designer.cs">
       <DependentUpon>ValidacionPersona.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="clientecs.resx">
-      <DependentUpon>clientecs.cs</DependentUpon>
+    <EmbeddedResource Include="RegistroClientes.resx">
+      <DependentUpon>RegistroClientes.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Conexion.resx">
       <DependentUpon>Conexion.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="InicioSesionCliente.resx">
+      <DependentUpon>InicioSesionCliente.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
