Se implemento la conexion basada en roles Usuario y Administrador
Se creo la form de administrador y se establecio la diferencia entre el inicio de sesion del cliente y del administrador

--- a/ProyectoBDM.csproj
+++ b/ProyectoBDM.csproj
@@ -99,6 +99,12 @@
     <Compile Include="Crear.Designer.cs">
       <DependentUpon>Crear.cs</DependentUpon>
     </Compile>
+    <Compile Include="MenuAdmin.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MenuAdmin.Designer.cs">
+      <DependentUpon>MenuAdmin.cs</DependentUpon>
+    </Compile>
     <Compile Include="MenuClientes.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -148,6 +154,9 @@
     <Compile Include="VerPeliculas.Designer.cs">
       <DependentUpon>VerPeliculas.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="MenuAdmin.resx">
+      <DependentUpon>MenuAdmin.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MenuClientes.resx">
       <DependentUpon>MenuClientes.cs</DependentUpon>
     </EmbeddedResource>
