--- a/ProyectoBDM.csproj
+++ b/ProyectoBDM.csproj
@@ -154,6 +154,12 @@
     <Compile Include="VerPeliculas.Designer.cs">
       <DependentUpon>VerPeliculas.cs</DependentUpon>
     </Compile>
+    <Compile Include="Vista\Modificar.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Vista\Modificar.Designer.cs">
+      <DependentUpon>Modificar.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="MenuAdmin.resx">
       <DependentUpon>MenuAdmin.cs</DependentUpon>
     </EmbeddedResource>
