--- a/ProyectoBDM.csproj
+++ b/ProyectoBDM.csproj
@@ -160,6 +160,12 @@
     <Compile Include="Vista\Modificar.Designer.cs">
       <DependentUpon>Modificar.cs</DependentUpon>
     </Compile>
+    <Compile Include="Vista\Multas.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Vista\Multas.Designer.cs">
+      <DependentUpon>Multas.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="MenuAdmin.resx">
       <DependentUpon>MenuAdmin.cs</DependentUpon>
     </EmbeddedResource>
@@ -176,6 +182,9 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="VerPeliculas.resx">
+      <DependentUpon>VerPeliculas.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Vista\Modificar.resx">
       <DependentUpon>Modificar.cs</DependentUpon>
