Estado de Cuenta y Registro de los Clientes
Diseño del estado de cuenta con posibilidad de edicion y orden de el registro de los clientes

--- a/ProyectoBDM.csproj
+++ b/ProyectoBDM.csproj
@@ -99,11 +99,11 @@
     <Compile Include="actoresAdmin.Designer.cs">
       <DependentUpon>actoresAdmin.cs</DependentUpon>
     </Compile>
-    <Compile Include="Crear.cs">
+    <Compile Include="CuentaCliente.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Crear.Designer.cs">
-      <DependentUpon>Crear.cs</DependentUpon>
+    <Compile Include="CuentaCliente.Designer.cs">
+      <DependentUpon>CuentaCliente.cs</DependentUpon>
     </Compile>
     <Compile Include="direcAdmin.cs">
       <SubType>Form</SubType>
