--- a/ProyectoBDM.csproj
+++ b/ProyectoBDM.csproj
@@ -178,6 +178,12 @@
     <Compile Include="SolicitarPrestamo.Designer.cs">
       <DependentUpon>SolicitarPrestamo.cs</DependentUpon>
     </Compile>
+    <Compile Include="verPeliculas.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="verPeliculas.Designer.cs">
+      <DependentUpon>verPeliculas.cs</DependentUpon>
+    </Compile>
     <Compile Include="Vista\Modificar.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -218,6 +224,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="SolicitarPrestamo.resx">
       <DependentUpon>SolicitarPrestamo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="verPeliculas.resx">
+      <DependentUpon>verPeliculas.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Vista\Modificar.resx">
       <DependentUpon>Modificar.cs</DependentUpon>
