--- a/ProyectoBDM.csproj
+++ b/ProyectoBDM.csproj
@@ -160,12 +160,6 @@
     <Compile Include="peliculasAdmin.Designer.cs">
       <DependentUpon>peliculasAdmin.cs</DependentUpon>
     </Compile>
-    <Compile Include="PrestamosActivos.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="PrestamosActivos.Designer.cs">
-      <DependentUpon>PrestamosActivos.cs</DependentUpon>
-    </Compile>
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -203,6 +197,9 @@
     <EmbeddedResource Include="BuscarPeliculas.resx">
       <DependentUpon>BuscarPeliculas.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="CuentaCliente.resx">
+      <DependentUpon>CuentaCliente.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="direcAdmin.resx">
       <DependentUpon>direcAdmin.cs</DependentUpon>
     </EmbeddedResource>
@@ -214,6 +211,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MenuClientes.resx">
       <DependentUpon>MenuClientes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PagarMultas.resx">
+      <DependentUpon>PagarMultas.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="peliculasAdmin.resx">
       <DependentUpon>peliculasAdmin.cs</DependentUpon>
