--- a/ProyectoBDM.csproj
+++ b/ProyectoBDM.csproj
@@ -93,6 +93,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Control\ControlRelacionGeneroPelicula.cs" />
     <Compile Include="Control\ControlInicioSesionClientes.cs" />
     <Compile Include="Control\ControlMulta.cs" />
     <Compile Include="historialCliente.cs">
@@ -121,11 +122,11 @@
     <Compile Include="Vista\actoresAdmin.Designer.cs">
       <DependentUpon>actoresAdmin.cs</DependentUpon>
     </Compile>
-    <Compile Include="InsertarGeneroPelicula.cs">
+    <Compile Include="RelacionGeneroPelicula.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="InsertarGeneroPelicula.Designer.cs">
-      <DependentUpon>InsertarGeneroPelicula.cs</DependentUpon>
+    <Compile Include="RelacionGeneroPelicula.Designer.cs">
+      <DependentUpon>RelacionGeneroPelicula.cs</DependentUpon>
     </Compile>
     <Compile Include="Control\ControlActoresAdmi.cs" />
     <Compile Include="Control\ControlPeliculasAdmi.cs" />
@@ -207,8 +208,8 @@
     <EmbeddedResource Include="Vista\actoresAdmin.resx">
       <DependentUpon>actoresAdmin.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="InsertarGeneroPelicula.resx">
-      <DependentUpon>InsertarGeneroPelicula.cs</DependentUpon>
+    <EmbeddedResource Include="RelacionGeneroPelicula.resx">
+      <DependentUpon>RelacionGeneroPelicula.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Vista\direcAdmin.resx">
       <DependentUpon>direcAdmin.cs</DependentUpon>
