--- a/ProyectoBDM.csproj
+++ b/ProyectoBDM.csproj
@@ -115,6 +115,12 @@
     <Compile Include="Vista\consultasAdmin.Designer.cs">
       <DependentUpon>consultasAdmin.cs</DependentUpon>
     </Compile>
+    <Compile Include="Vista\estadoPrestamo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Vista\estadoPrestamo.Designer.cs">
+      <DependentUpon>estadoPrestamo.cs</DependentUpon>
+    </Compile>
     <Compile Include="Vista\Multa.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -220,6 +226,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Vista\consultasAdmin.resx">
       <DependentUpon>consultasAdmin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Vista\estadoPrestamo.resx">
+      <DependentUpon>estadoPrestamo.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Vista\Multa.resx">
       <DependentUpon>Multa.cs</DependentUpon>
